Revision history for File::DataClass

0.48.1    2014-09-03 23:22:44
          - Removed CHI. Reduces dependencies

0.47.1    2014-08-27 17:15:48
          - Have new one liner to feature test this particular insanity
            d26d4928-6bf5-1014-99ad-e1a5890cd912

0.46.1    2014-08-26 17:40:30
          - Hate win32 smokers
            0b96e4a1-6bf7-1014-b852-a17c890cd912
          - Added MANIFEST to repository
          - Fixed dependency version
          - Added Travis integration and badges
          - Adjusted toolchain for Github

0.45.1    2014-08-18 23:58:19
          - Bumped Type:Tiny version RT#98113

0.44.1    2014-07-16 13:37:02
          - Deleted dependency on strictures
          - Deleted some exception tests

0.43.1    2014-07-04 13:17:32
          - Releasing
          - Fixed resultset update and added tests
          - Added backwards bool to ::IO
          - Skipping heads / tails test on win32 since it's too flakey
            29a2bb0c-6bf4-1014-974a-4394dad81770

0.42.1    2014-07-04 00:27:00
          - Releasing
          - Fixed type error in ::ResultSet::delete
          - Replaced namespace::sweep with ::autoclean
          - Fixed obscure syntax in ::Storage::txn_do
          - Deprecated name attribute in favour of id
          - Restored binmode default for NTFS

0.41.1    2014-05-28 11:27:00
          - Can now pass just a record name to find
          - Stopped txn_do from adding extra exception leader
          - Storage exceptions should be a full package name
          - Prevent duplicate IO layers
          - Attempting to fix tail test in win31

0.40.1    2014-05-22 10:35:56
          - Added head and tail methods to ::IO
          - Fixed PerlIO layers in ::IO
          - Using strict UTF-8 in ::IO

0.39.1    2014-05-16 09:17:58
          - 6fbe5176-dcb6-11e3-84c4-fc77f9652e90 Added Test::Requires
            Hash::MoreUtils

0.38.1    2014-05-15 01:09:50
          - cad362f6-dba6-11e3-84c4-fc77f9652e90 Random WTF
