@@ -4,7 +4,7 @@ Name
 
 Version
 
-    This document describes version v0.48.$Rev: 1 $ of File::DataClass
+    This document describes version v0.48.$Rev: 3 $ of File::DataClass
 
 Synopsis
 
